# temp-sih

./: .gitignore  16384KB  PROGRESS.md  README.md  plan.txt  pyproject.toml  setup.py
kavach/: README.md
kavach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
kavach/backend/: requirements.txt
kavach/backend/app/: main.py
kavach/backend/app/api/: endpoints.py
kavach/backend/app/core/: checkpoint_manager.py  logging_manager.py  os_detect.py  report_generator.py  rule_engine.py
kavach/backend/app/models/: rules.py
kavach/cli/: kavach_cli.py
kavach/examples/: annexure_example.json  annexure_rules.json
kavach/frontend/: app.js  index.html  style.css
kavach/ruleModules/: annexure_rules.json
kavach/tui/: app.css  app.py
security_hardening_tool/: main.py
security_hardening_tool/config/: rules.json  rules.yaml
security_hardening_tool/modules/: hardening_engine.py  os_detector.py  reporting.py  rollback.py  tui.py
