[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kavach"
version = "0.1.0"
description = "Kavach - Security Compliance Tool"
readme = "kavach/README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "fastapi",
    "uvicorn[standard]",
    "distro",
    "cryptography",
    "textual",
]

[project.scripts]
kavach = "kavach.cli.kavach_cli:cli"

[tool.setuptools]
packages = ["kavach", "kavach.backend", "kavach.backend.app", "kavach.backend.app.api", "kavach.backend.app.checkpoints", "kavach.backend.app.core", "kavach.backend.app.models", "kavach.backend.app.rules", "kavach.cli", "kavach.tui"]
